--- a/index.html
+++ b/index.html
@@ -15,318 +15,224 @@
       </div>
     </div>
     <!-- TradingView Widget BEGIN -->
-    <div class="tradingview-widget-container" id="dark">
-      <div class="tradingview-widget-container__widget"></div>
-      <div class="tradingview-widget-copyright">
-        <a href="https://www.tradingview.com" rel="noopener" target="_blank"
-          ><span class="blue-text">Market Data</span></a
-        >
-        by TradingView
-      </div>
-      <script
-        type="text/javascript"
-        src="https://s3.tradingview.com/external-embedding/embed-widget-market-quotes.js"
-        async
-      >
-          {
-          "width": "100%",
-          "height": "600",
-          "symbolsGroups": [
-          {
-            "name": "Stocks",
-            "symbols": [
-              {
-                "name": "NASDAQ:AMZN",
-                "displayName": "AMZN - Amazon"
-              },
-              {
-                "name": "TSX:BB",
-                "displayName": "BB - Blackberry"
-              },
-              {
-                "name": "TSX:BEPC",
-                "displayName": "BEPC - Brookfield Renewable"
-              },
-              {
-                "name": "TSX:BEP.UN",
-                "displayName": "BEP.UN - Brookfield Renewable"
-              },
-              {
-                "name": "TSX:BIP.UN",
-                "displayName": "BIP.UN - Brookfield Infrastructure"
-              },
-              {
-                "name": "TSX:BMO",
-                "displayName": "BMO - Bank of Montreal"
-              },
-              {
-                "name": "NASDAQ:CLAR",
-                "displayName": "CLAR - Clarus (BD)"
-              },
-              {
-                "name": "NYSE:GME",
-                "displayName": "GME - Gamestop"
-              },
-              {
-                "name": "TSXV:GRN",
-                "displayName": "GRN.V - Greenlane Renewables"
-              },
-              {
-                "name": "TSX:GRT.UN",
-                "displayName": "GRT.UN - Granite REIT"
-              },
-              {
-                "name": "TSX:LSPD",
-                "displayName": "LSPD - Lightspeed"
-              },
-              {
-                "name": "NASDAQ:MSFT",
-                "displayName": "MSFT - Microsoft"
-              },
-              {
-                "name": "NYSE:PLTR",
-                "displayName": "PLTR - Palantir"
-              },
-              {
-                "name": "TSX:VET",
-                "displayName": "VET - Vermillion Energy"
-              }
-            ]
-          },
-          {
-            "name": "ETFs",
-            "symbols": [
-              {
-                "name": "NASDAQ:BOTZ",
-                "displayName": "BOTZ - Robots & AI"
-              },
-              {
-                "name": "AMEX:IPAY",
-                "displayName": "IPAY - Mobile/FinTech"
-              },
-              {
-                "name": "NASDAQ:QCLN",
-                "displayName": "QCLN - Clean Energy Index"
-              },
-              {
-                "name": "NASDAQ:SKYY",
-                "displayName": "SKYY - Cloud Computing"
-              },
-              {
-                "name": "TSX:TEC",
-                "displayName": "TEC - Technology Index"
-              },
-              {
-                "name": "TSX:XIT",
-                "displayName": "XIT - CAD Tech Index"
-              },
-              {
-                "name": "TSX:ZRE",
-                "displayName": "ZRE - REITs"
-              },
-              {
-                "name": "TSX:ZUT",
-                "displayName": "ZUT - Utilities"
-              },
-              {
-                "name": "TSX:ZWB",
-                "displayName": "ZWB - CC Banks"
-              },
-              {
-                "name": "TSX:ZWU",
-                "displayName": "ZWU - CC Utilities"
-              }
-            ]
-          },
-          {
-            "name": "Watch List",
-            "symbols": [
-              {
-                "name": "NASDAQ:CRSR",
-                "displayName": "CRSR - Corsair"
-              },
-              {
-                "name": "NYSE:DM",
-                "displayName": "DM - Desktop Metal"
-              },
-              {
-                "name": "NYSE:PRLB",
-                "displayName": "PRLB - PROTO Labs"
-              },
-              {
-                "name": "AMEX:PRNT",
-                "displayName": "PRNT - 3D Printing"
-              },
-              {
-                "name": "NYSE:SQ",
-                "displayName": "SQ - Square"
-              }
-            ]
-          }
-        ],
-          "showSymbolLogo": true,
-          "colorTheme": "dark",
-          "isTransparent": true,
-          "locale": "en"
-        }
-      </script>
-    </div>
-    <!-- TradingView Widget END -->
-    <!-- TradingView Widget BEGIN -->
     <div class="tradingview-widget-container" id="light">
       <div class="tradingview-widget-container__widget"></div>
-      <div class="tradingview-widget-copyright">
-        <a href="https://www.tradingview.com" rel="noopener" target="_blank"
-          ><span class="blue-text">Market Data</span></a
-        >
-        by TradingView
-      </div>
-      <script
-        type="text/javascript"
-        src="https://s3.tradingview.com/external-embedding/embed-widget-market-quotes.js"
-        async
-      >
+      <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/stocks-usa/" rel="noopener" target="_blank"><span class="blue-text">Stock Quotes</span></a> by TradingView</div>
+      <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js" async>
       {
-        "width": "100%",
-        "height": "600",
-        "symbolsGroups": [
+      "title": "Stocks",
+      "tabs": [
         {
-          "name": "Stocks",
+          "title": "Financial",
           "symbols": [
             {
-              "name": "NASDAQ:AMZN",
-              "displayName": "AMZN - Amazon"
+              "s": "NYSE:JPM",
+              "d": "Jpmorgan Chase & Co"
             },
             {
-              "name": "TSX:BB",
-              "displayName": "BB - Blackberry"
+              "s": "NYSE:WFC",
+              "d": "Wells Fargo Co New"
             },
             {
-              "name": "TSX:BEPC",
-              "displayName": "BEPC - Brookfield Renewable"
+              "s": "NYSE:BAC",
+              "d": "Bank Amer Corp"
             },
             {
-              "name": "TSX:BEP.UN",
-              "displayName": "BEP.UN - Brookfield Renewable"
+              "s": "NYSE:HSBC",
+              "d": "Hsbc Hldgs Plc"
             },
             {
-              "name": "TSX:BIP.UN",
-              "displayName": "BIP.UN - Brookfield Infrastructure"
+              "s": "NYSE:C",
+              "d": "Citigroup Inc"
             },
             {
-              "name": "TSX:BMO",
-              "displayName": "BMO - Bank of Montreal"
-            },
-            {
-              "name": "NASDAQ:CLAR",
-              "displayName": "CLAR - Clarus (BD)"
-            },
-            {
-              "name": "NYSE:GME",
-              "displayName": "GME - Gamestop"
-            },
-            {
-              "name": "TSXV:GRN",
-              "displayName": "GRN.V - Greenlane Renewables"
-            },
-            {
-              "name": "TSX:GRT.UN",
-              "displayName": "GRT.UN - Granite REIT"
-            },
-            {
-              "name": "TSX:LSPD",
-              "displayName": "LSPD - Lightspeed"
-            },
-            {
-              "name": "NASDAQ:MSFT",
-              "displayName": "MSFT - Microsoft"
-            },
-            {
-              "name": "NYSE:PLTR",
-              "displayName": "PLTR - Palantir"
-            },
-            {
-              "name": "TSX:VET",
-              "displayName": "VET - Vermillion Energy"
+              "s": "NYSE:MA",
+              "d": "Mastercard Incorporated"
             }
           ]
         },
         {
-          "name": "ETFs",
+          "title": "Technology",
           "symbols": [
             {
-              "name": "NASDAQ:BOTZ",
-              "displayName": "BOTZ - Robots & AI"
+              "s": "NASDAQ:AAPL",
+              "d": "Apple"
             },
             {
-              "name": "AMEX:IPAY",
-              "displayName": "IPAY - Mobile/FinTech"
+              "s": "NASDAQ:GOOGL",
+              "d": "Google Inc"
             },
             {
-              "name": "NASDAQ:QCLN",
-              "displayName": "QCLN - Clean Energy Index"
+              "s": "NASDAQ:MSFT",
+              "d": "Microsoft Corp"
             },
             {
-              "name": "NASDAQ:SKYY",
-              "displayName": "SKYY - Cloud Computing"
+              "s": "NASDAQ:FB",
+              "d": "Facebook Inc"
             },
             {
-              "name": "TSX:TEC",
-              "displayName": "TEC - Technology Index"
+              "s": "NYSE:AMD",
+              "d": "AMD"
             },
             {
-              "name": "TSX:XIT",
-              "displayName": "XIT - CAD Tech Index"
-            },
-            {
-              "name": "TSX:ZRE",
-              "displayName": "ZRE - REITs"
-            },
-            {
-              "name": "TSX:ZUT",
-              "displayName": "ZUT - Utilities"
-            },
-            {
-              "name": "TSX:ZWB",
-              "displayName": "ZWB - CC Banks"
-            },
-            {
-              "name": "TSX:ZWU",
-              "displayName": "ZWU - CC Utilities"
+              "s": "NASDAQ:NVDA",
+              "d": "NVIDIA"
             }
           ]
         },
         {
-          "name": "Watch List",
+          "title": "SASS",
           "symbols": [
             {
-              "name": "NASDAQ:CRSR",
-              "displayName": "CRSR - Corsair"
+              "s": "NYSE:CRM",
+              "d": "Salesforce"
             },
             {
-              "name": "NYSE:DM",
-              "displayName": "DM - Desktop Metal"
+              "s": "NYSE:SQ",
+              "d": "Square Inc."
             },
             {
-              "name": "NYSE:PRLB",
-              "displayName": "PRLB - PROTO Labs"
+              "s": "NYSE:SMAR",
+              "d": "Smartsheet"
             },
             {
-              "name": "AMEX:PRNT",
-              "displayName": "PRNT - 3D Printing"
+              "s": "NASDAQ:JAMF",
+              "d": "JAMF"
             },
             {
-              "name": "NYSE:SQ",
-              "displayName": "SQ - Square"
+              "s": "NYSE:SNOW",
+              "d": "Snowflake Inc"
             }
           ]
         }
       ],
-        "showSymbolLogo": true,
-        "colorTheme": "light",
-        "isTransparent": true,
-        "locale": "en"
-      }
+      "colorTheme": "light",
+      "dateRange": "12M",
+      "showChart": true,
+      "locale": "en",
+      "largeChartUrl": "",
+      "isTransparent": true,
+      "showSymbolLogo": true,
+      "width": "400",
+      "height": "660",
+      "plotLineColorGrowing": "rgba(25, 118, 210, 1)",
+      "plotLineColorFalling": "rgba(25, 118, 210, 1)",
+      "gridLineColor": "rgba(42, 46, 57, 1)",
+      "scaleFontColor": "rgba(120, 123, 134, 1)",
+      "belowLineFillColorGrowing": "rgba(33, 150, 243, 0.12)",
+      "belowLineFillColorFalling": "rgba(33, 150, 243, 0.12)",
+      "symbolActiveColor": "rgba(33, 150, 243, 0.12)",
+    }
+    <!-- TradingView Widget END -->
+    <!-- TradingView Widget BEGIN -->
+    <div class="tradingview-widget-container" id="dark">
+      <div class="tradingview-widget-container__widget"></div>
+      <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/stocks-usa/" rel="noopener" target="_blank"><span class="blue-text">Stock Quotes</span></a> by TradingView</div>
+      <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js" async>
+      {
+      "title": "Stocks",
+      "tabs": [
+        {
+          "title": "Financial",
+          "symbols": [
+            {
+              "s": "NYSE:JPM",
+              "d": "Jpmorgan Chase & Co"
+            },
+            {
+              "s": "NYSE:WFC",
+              "d": "Wells Fargo Co New"
+            },
+            {
+              "s": "NYSE:BAC",
+              "d": "Bank Amer Corp"
+            },
+            {
+              "s": "NYSE:HSBC",
+              "d": "Hsbc Hldgs Plc"
+            },
+            {
+              "s": "NYSE:C",
+              "d": "Citigroup Inc"
+            },
+            {
+              "s": "NYSE:MA",
+              "d": "Mastercard Incorporated"
+            }
+          ]
+        },
+        {
+          "title": "Technology",
+          "symbols": [
+            {
+              "s": "NASDAQ:AAPL",
+              "d": "Apple"
+            },
+            {
+              "s": "NASDAQ:GOOGL",
+              "d": "Google Inc"
+            },
+            {
+              "s": "NASDAQ:MSFT",
+              "d": "Microsoft Corp"
+            },
+            {
+              "s": "NASDAQ:FB",
+              "d": "Facebook Inc"
+            },
+            {
+              "s": "NYSE:AMD",
+              "d": "AMD"
+            },
+            {
+              "s": "NASDAQ:NVDA",
+              "d": "NVIDIA"
+            }
+          ]
+        },
+        {
+          "title": "SASS",
+          "symbols": [
+            {
+              "s": "NYSE:CRM",
+              "d": "Salesforce"
+            },
+            {
+              "s": "NYSE:SQ",
+              "d": "Square Inc."
+            },
+            {
+              "s": "NYSE:SMAR",
+              "d": "Smartsheet"
+            },
+            {
+              "s": "NASDAQ:JAMF",
+              "d": "JAMF"
+            },
+            {
+              "s": "NYSE:SNOW",
+              "d": "Snowflake Inc"
+            }
+          ]
+        }
+      ],
+      "colorTheme": "dark",
+      "dateRange": "12M",
+      "showChart": true,
+      "locale": "en",
+      "largeChartUrl": "",
+      "isTransparent": true,
+      "showSymbolLogo": true,
+      "width": "400",
+      "height": "660",
+      "plotLineColorGrowing": "rgba(25, 118, 210, 1)",
+      "plotLineColorFalling": "rgba(25, 118, 210, 1)",
+      "gridLineColor": "rgba(42, 46, 57, 1)",
+      "scaleFontColor": "rgba(120, 123, 134, 1)",
+      "belowLineFillColorGrowing": "rgba(33, 150, 243, 0.12)",
+      "belowLineFillColorFalling": "rgba(33, 150, 243, 0.12)",
+      "symbolActiveColor": "rgba(33, 150, 243, 0.12)",
+    }
       </script>
     </div>
     <!-- TradingView Widget END -->
